--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 													</div>
 													<div class="row">
 														<div class="DivBorder"> 
-															<a href="https://apps.apple.com/app/kubik-rubiks-cube-3d/id6443545229" target="_blank">
+															<a href="https://apps.apple.com/app/id1671237688" target="_blank">
 																<img class="DownloadIcon2" src="assets/images/download_appstore.png" alt=""  style="border-radius:0px;">
 															</a>
 														</div>
