--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 												<div class="col-lg-9 DivBorder" >	
 													<div class="row DivBorder">
 														<div class="col-lg-12" style="margin-bottom:5px">
-															<h3 style="margin-bottom:-20px;">Color Match Block Puzzle</h3>
+															<h3 style="margin-bottom:-20px;">CoMa: Color Match Block Puzzle</h3>
 															<h4><span>Color Match Block Puzzle is a fun and addictive game that goes beyond the classic block game. While trying to fill the rows and columns with blocks, you also need to pay attention to the colors of the blocks being the same.</span></h4>						
 														</div>
 													</div>
