--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			} 
 			
 		</style> 
-		
+		<meta name="facebook-domain-verification" content="54u6kfff1pzgak9ypeyimqut8311j3" />
 	</head>
 	
 	<body>
